# CHIP-8-Emulator

./: CMakeLists.txt  main.cpp
src/: chip8.cpp  platform.cpp
